--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 
 body {
 
-    
+
 
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
@@ -18,7 +18,7 @@ body {
 
 .heading {
 
-    
+
     height: 10vh;
     width: 100%;
     display: flex;
@@ -120,7 +120,7 @@ body {
 .container {
     background-image: url("/images/Background_Home.jpg");
     width: 100%;
-    
+
     height: auto;
 
     background-size: cover;
@@ -129,40 +129,134 @@ body {
 
 .head_content {
     background-color: rgba(0, 0, 0, 0.5);
-    height:100%;
+    height: 100%;
     padding: 10%;
-    
+
 }
 
 .head_content h1 {
-    
+
     font-size: 50px;
     color: white;
 }
 
 
-.msg_button{
-    
-   width:20%;
+.msg_button {
+
+    width: 20%;
     margin: 5px;
-    padding: 10px 20px ;
+    padding: 10px 20px;
     text-align: center;
     color: white;
     font-weight: bold;
     font-size: 18px;
 }
 
-.b1{
+.b1 {
     background-color: blueviolet;
-    border: 4px solid  blueviolet;
+    border: 4px solid blueviolet;
 
 
 }
-.b2{
-    border: 4px solid  blueviolet;
+
+.b2 {
+    border: 4px solid blueviolet;
     background-color: rgba(137, 43, 226, 0.466);
 }
 
+
+
+
+
+
+
+.main_body {
+    width: 90%;
+    margin-left: 5%;
+}
+
+
+
+
+
+
+
+
+
+/* Seller Card styles */
+
+.sellers {
+    width: 100%;
+    background-color: antiquewhite;
+
+}
+
+
+.seller_card {
+    width: 80%;
+    height: 150px;
+    border: 2px solid black;
+    display: flex;
+    padding: 5px 10px;
+    align-items: center;
+    border-radius: 20px;
+
+
+}
+
+.S_profile_img img {
+    width: auto;
+    height: 150px;
+    border-radius: 50%;
+
+}
+
+.S_detail {
+    margin-left: 5%;
+
+}
+
+.Sname {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 30px;
+
+}
+
+
+.seller_desc {
+    align-items: center;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.hirebtn {
+    padding: 5px 10px;
+    border-radius: 20px;
+    width: 100px;
+    background-color: blueviolet;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.skill_list {
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+}
+
+
+
+.skills {
+    padding: 2px 10px;
+    background-color: rgb(199, 199, 199);
+    border-radius: 20px;
+    margin-right: 10px;
+
+}
 
 
 
