--- a/styles/style.css
+++ b/styles/style.css
@@ -4,36 +4,23 @@
 }
 
 body {
-
-
-
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
 }
 
-
 /* Homepage,index page  Style  */
 
-
-
 .heading {
-
-
     height: 10vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-
-
-
 }
 
 .main_logo {
     width: 60%;
     padding: 10% 20%;
-
 }
 
 .Main_search {
@@ -59,16 +46,12 @@ body {
     border-radius: 20px;
     background-color: transparent;
     align-items: end;
-
+    font-weight: bold;
 }
 
 .Se_icon {
-
     height: 25px;
-
 }
-
-
 
 .dp {
     margin-right: 40px;
@@ -82,11 +65,8 @@ body {
     font-weight: bold;
 }
 
-
-
-
 .profile_pic {
-    background-image: url("/images/profile\ 2.jpg");
+    background-image: url("../images/profile\ 2.jpg");
     background-position: center;
     background-size: cover;
     width: 50px;
@@ -95,7 +75,6 @@ body {
 }
 
 .Catergpory_link {
-
     align-items: center;
     width: 100%;
     height: 8vh;
@@ -106,19 +85,16 @@ body {
     position: sticky;
     top: 0px;
     background-color: aliceblue;
-
 }
 
 .C_links {
-
     padding: 5px 20px;
     background-color: rgba(146, 146, 146, 0.315);
     border-radius: 20px;
 }
 
-
 .container {
-    background-image: url("/images/Background_Home.jpg");
+    background-image: url("../images/Background_Home.jpg");
     width: 100%;
 
     height: auto;
@@ -131,18 +107,14 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     height: 100%;
     padding: 10%;
-
 }
 
 .head_content h1 {
-
     font-size: 50px;
     color: white;
 }
 
-
 .msg_button {
-
     width: 20%;
     margin: 5px;
     padding: 10px 20px;
@@ -155,8 +127,6 @@ body {
 .b1 {
     background-color: blueviolet;
     border: 4px solid blueviolet;
-
-
 }
 
 .b2 {
@@ -164,103 +134,76 @@ body {
     background-color: rgba(137, 43, 226, 0.466);
 }
 
-
-
-
-
-
-
 .main_body {
     width: 90%;
     margin-left: 5%;
 }
 
-
-
-
-
-
-
-
-
 /* Seller Card styles */
-
-.sellers {
-    width: 100%;
-    background-color: antiquewhite;
-
-}
-
-
 .seller_card {
-    width: 80%;
+    width: 90%;
     height: 150px;
     border: 2px solid black;
     display: flex;
     padding: 5px 10px;
     align-items: center;
+    justify-content: center;
     border-radius: 20px;
-
-
+    margin-left: 5%;
+    margin-bottom: 3%;
 }
 
 .S_profile_img img {
-    width: auto;
+    width: 150px;
     height: 150px;
     border-radius: 50%;
-
 }
 
 .S_detail {
     margin-left: 5%;
-
 }
 
 .Sname {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
-
 }
 
-
 .seller_desc {
-    align-items: center;
+    /* align-items: center; */
     display: flex;
-    width: 100%;
-    justify-content: space-between;
+    width: 90%;
+    /* justify-content: space-between; */
 }
 
 .hirebtn {
     padding: 5px 10px;
     border-radius: 20px;
-    width: 100px;
+    width: 120px;
     background-color: blueviolet;
     color: white;
-    align-items: center;
-    justify-content: center;
+    
+    text-align: center;
     cursor: pointer;
+    margin-right: 2%;
+    font-size: 20px;
 }
 
 .skill_list {
     display: flex;
-    justify-content: space-around;
-    width: 20%;
+    justify-content: 
+    width:auto;
+   
+    margin-top: 2%;
+    
 }
-
-
 
 .skills {
     padding: 2px 10px;
     background-color: rgb(199, 199, 199);
     border-radius: 20px;
     margin-right: 10px;
-
 }
-
-
-
-
 
 /* footer Styles*/
 .footer {
@@ -275,7 +218,6 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-
 }
 
 a {
@@ -285,28 +227,22 @@ a {
 }
 
 .Row_item {
-
     display: flex;
     flex-direction: column;
-
 }
 
 .Row_item a {
-    font-size: small
+    font-size: small;
 }
-
 
 .Hrule {
     margin-top: 1%;
-
 }
 
 .devT {
     width: 100%;
     text-align: center;
 }
-
-
 
 .iconset {
     width: 12%;
