--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 :root {
     --main-bg-color: rgb(46, 46, 46);
     --seachbar-color: rgba(73, 73, 73, 0.404);
+    --Cat-linkb-color:aliceblue;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
     margin: 0%;
 }
 
-/* Homepage,index page  Style  */
+/* Homepage,Home page  Style  */
 
 .heading {
     height: 10vh;
@@ -54,8 +55,8 @@ body {
 }
 
 .dp {
-    margin-right: 40px;
-    width: 12%;
+    margin-right:20px;
+    width: 20%;
     justify-content: space-between;
     display: flex;
     align-items: center;
@@ -66,7 +67,7 @@ body {
 }
 
 .profile_pic {
-    background-image: url("../images/profile\ 2.jpg");
+    background-image: url("../images/Sellers/M1.jpg");
     background-position: center;
     background-size: cover;
     width: 50px;
@@ -84,13 +85,14 @@ body {
     border-top: 1px solid rgba(124, 124, 124, 0.719);
     position: sticky;
     top: 0px;
-    background-color: aliceblue;
+    background-color:var(--Cat-linkb-color)
 }
 
 .C_links {
     padding: 5px 20px;
     background-color: rgba(146, 146, 146, 0.315);
     border-radius: 20px;
+    cursor: pointer;
 }
 
 .container {
@@ -115,6 +117,7 @@ body {
 }
 
 .msg_button {
+    cursor: pointer;
     width: 20%;
     margin: 5px;
     padding: 10px 20px;
@@ -139,24 +142,134 @@ body {
     margin-left: 5%;
 }
 
+
+.navbar{
+    /* background-color: rgb(78, 78, 78); */
+    display: flex;
+    width: 100%;
+    height: 50px;
+    justify-content: space-evenly;
+align-items: center;
+    
+
+}
+.nav{
+    color: white;
+    height: 80%;
+    align-items: center;
+    padding:  10px 20px ;
+    border-radius: 20px;    
+    background-color: blueviolet;
+        
+    
+}
+
+/* jobcard style */
+.jobcard{
+    width: 90%;
+    height:auto;
+    border-bottom: 1px solid black;
+
+    /* display: flex; */
+    padding: 5px 10px;
+    align-items: center;
+    justify-content: center;
+    
+    margin-left: 5%;
+    margin-bottom: 1%;
+}
+.jobcard:hover{
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px;
+}
+
+
+.PAsection{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+   
+}
+
+.price{
+    background-color: blueviolet;
+    padding: 8px 10px;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+}
+
+.apply{
+    background-color: blueviolet;
+    padding: 15px 30px;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+
+}
+
+.skillapp{
+    display: flex;
+    width: 100%;
+    margin-bottom: 1%;
+    
+   
+
+}
+
+
+.seemore{
+    color: black;
+    width: 100%;
+    margin-left: 50%;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 4%;
+}
+
+
+
 /* Seller Card styles */
 .seller_card {
     width: 90%;
     height: 150px;
-    border: 2px solid black;
+    border-bottom: 1px solid black;
+
     display: flex;
     padding: 5px 10px;
     align-items: center;
     justify-content: center;
-    border-radius: 20px;
+    
     margin-left: 5%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
+    
+    
+    
+}
+
+.seller_card:hover{
+    box-shadow: 2px 2px 10px;
+    border-radius: 20px;
 }
 
 .S_profile_img img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    justify-content: center;
+
+}
+
+.S_profile_img{
+
+    width: 220px;
+    height: 150px;
+    background-size: cover;
+    border-radius: 50%;
+    background-position:center; 
+    background-image: url("../images/Sellers/1.jpg");
 }
 
 .S_detail {
@@ -168,7 +281,16 @@ body {
     font-weight: bold;
     margin-bottom: 30px;
 }
+.jobtitle{
+    padding: 2px 10px;
+    background-color: rgba(255, 230, 0, 0.904);
+    border-radius: 20px;
+    margin-right: 10px;
+    width: fit-content;
+    margin-bottom: 1%;
+    text-align: center;
 
+}
 .seller_desc {
     /* align-items: center; */
     display: flex;
@@ -191,9 +313,7 @@ body {
 
 .skill_list {
     display: flex;
-    justify-content: 
     width:auto;
-   
     margin-top: 2%;
     
 }
@@ -205,10 +325,93 @@ body {
     margin-right: 10px;
 }
 
+
+
+
+
+
+
+
+ 
+/* Profile style  */
+
+.data{
+    display: flex;
+    width: 100%;
+    padding: 40px;
+}
+
+.pimage{
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+    
+    width: 400px;
+    height: 400px;
+    box-shadow: 5px 5px 10px;
+    /* border: 1px solid black;   */
+   overflow: hidden;
+
+}
+
+.pro_details{
+    text-align: justify;
+    width: 80%;
+    padding: 20px;
+    margin-left: 3%;
+}
+.Head_Name{
+    font-size: 50px;
+}
+
+.p_about{
+    
+    width: 80%;
+}
+
+.myskills .skills{
+    margin: 5px;
+    width: fit-content;
+
+}
+.myskills .skills{
+float: left;
+}
+
+.seller_con{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+}
+.conme{
+    border-radius: 20px;
+    color: white;
+
+    width: 20%;
+    text-align: center;
+    padding: 10px 20px;
+    background-color: blueviolet;
+    cursor: pointer;
+
+}
+
+.conme:hover{
+    box-shadow: 5px 5px 15x;
+   
+}
+
+a{
+    text-decoration: none;
+    
+}
+
+
+
 /* footer Styles*/
 .footer {
     background-color: var(--main-bg-color);
-    width: 100%;
+    width: auto;
     height: auto;
     color: white;
     padding: 20px 20px 20px 0px;
@@ -220,7 +423,13 @@ body {
     justify-content: space-evenly;
 }
 
-a {
+
+.dp a{
+    text-decoration: none;
+    color: black;
+
+}
+.footer a {
     text-decoration: none;
     color: white;
     line-height: 150%;
@@ -239,7 +448,7 @@ a {
     margin-top: 1%;
 }
 
-.devT {
+.devt{
     width: 100%;
     text-align: center;
 }
